# Renderer

./: README.md
src/cpp/: CMakeLists.txt  Export.h
src/cpp/ECS/: CMakeLists.txt  ECS.h  ECSAPI.h  ThreadLocal.h  ThreadPool.h  Time.h  utils.h
src/cpp/ECS/Async/: Async.h  AsyncScheduler.h  Awaitable.h  AwaitableManager.h  Task.h  TaskManager.h  UniqueThread.h
src/cpp/ECS/Component/: Component.h  ComponentKind.h  ComponentMap.h  ComponentRegistry.cpp  ComponentRegistry.h  ComponentTypeRegistry.h  SingletonTypeRegistry.h  TypeUUID.h
src/cpp/ECS/Component/Types/: AbstractComponentType.h  BooleanComponentType.cpp  BooleanComponentType.h  ComponentFactory.h  Metadata.h  NameComponentType.cpp  NameComponentType.h  PrimaryComponentType.cpp  PrimaryComponentType.h  PrimaryKindRegistry.h  SecondaryComponentType.cpp  SecondaryComponentType.h  Types.h
src/cpp/ECS/Entity/: Archetype.h  ArchetypeUtils.h  Archetypeiterator.h  BooleanArchetype.cpp  BooleanArchetype.h  BooleanStorage.h  ComponentStorage2.h  Entity.cpp  Entity.h  EntityName.h  EntityRegistry.h  MetadataProvider.h  SecondaryArchetype.h  SparseComponentStorage.h
src/cpp/ECS/Forge/: BooleanStagingBuffer.h  DeletedEntitiesBuffer.h  EntityCommandBuffer.h  EntityCreateBuffer.h  NameStagingBuffer.h  PrimaryStagingBuffer.h  SecondaryStagingBuffer.h
src/cpp/ECS/Global/: Allocator.h  FrameAllocator.h
src/cpp/ECS/Level/: Level.cpp  Level.h  LevelContext.h  LevelRuntime.cpp  LevelRuntime.h  LevelView.h  ThisFrame.h
src/cpp/ECS/Level/Views/: BasicView.h  LevelAPI.h  LevelParallelView.h  LevelSerialView.h  LevelUpdateView.h
src/cpp/ECS/System/: ExecutionGraphCreationContext.h  ISystem.h  RuntimeSystemDescriptor.h  StageKindRegistry.h  SystemCallContext.h  SystemConcept.h  SystemDescriptor.h  SystemEnumerable.cpp  SystemEnumerable.h  SystemKindRegistry.h  SystemProfileReport.h  SystemQuery.cpp  SystemQuery.h  SystemRegistry.cpp  SystemRegistry.h  SystemScheduler.cpp  SystemScheduler.h  SystemVirtualTable.h
src/cpp/ECS/System/Stages/: StageInterface.h  SystemAssembler.h  SystemGraph.h  UpdateStage.cpp  UpdateStage.h
src/cpp/Filesystem/: Filepath.h  Serializer.h
src/cpp/Image/: CMakeLists.txt  CubemapImage.h  Image.cpp  Image.h  ImageAPI.h  ImageArray.h  ImageDesc.h  ImageLoader.cpp  ImageLoader.h
src/cpp/Math/: BoundingVolumeHierarchy.h  CMakeLists.txt  MathAPI.h  Rotation.h
src/cpp/Math/Shapes/: AABB.h  Capsule.h  OOBB.h  Octree.h  QuadTree.h  Ray.cpp  Ray.h  geom.cpp  geom.h
src/cpp/Mesh/: CMakeLists.txt  CMakeLists.txt.txt  MeshAPI.h  MeshPrimitive.h  MeshRenderer.h  Model.h  ModelCooking.cpp  ModelCooking.h  ModelHierarchyAsset.h  ModelResource.cpp  ModelResource.h  SkinnedMeshRenderer.h
src/cpp/Mesh/Animation/: AnimationPlayer.h  FCurve.h  ModelAnimation.cpp  ModelAnimation.h  ModelAnimator.h
src/cpp/Other/: AABBRenderer.cpp  AABBRenderer.h
src/cpp/Renderer/: CMakeLists.txt  Frame.h  Renderer.cpp  Renderer.h  RendererAPI.h  SDLWindow.cpp  SDLWindow.h
src/cpp/Renderer/Bloom/: BloomPass.cpp  BloomPass.h  BloomRenderer.cpp  BloomRenderer.h
src/cpp/Renderer/Common/: Frustum.h  GPUCamera.h  Interpolation.h  Transform.h  TypeAllocator.h
src/cpp/Renderer/Display/: DisplayPass.cpp  DisplayPass.h  DisplayResources.h
src/cpp/Renderer/Graphics/: DrawPrimitive.h  Features.h  GLDrawPrimitive.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsPass.cpp  GraphicsPass.h  PassBindings.cpp  PassBindings.h  PushConstant.cpp  PushConstant.h  RenderPass.cpp  RenderPass.h
src/cpp/Renderer/Graphics/DrawContainers/: ComputeCmdContainer.h  CubemapDrawContainer.h  DrawContainers.cpp  IndirectDrawContainer.h  MultiDrawContainer.h  ScissorDrawContainer.h  StandardDrawContainer.h
src/cpp/Renderer/Graphics/Features/: Features.cpp  (+4 more)
src/cpp/Renderer/Invocations/: MainRenderInvocation.cpp  MainRenderInvocation.h
src/cpp/Renderer/Light/: AtmosphereSystem.h  BRDFLutBakePass.cpp  BRDFLutBakePass.h  LightCollection.h  LightSystem.cpp  LightSystem.h  PointLightPartition.h
src/cpp/Renderer/Pipeline/: GraphicsPassBase.h  GraphicsPassInvocation.h  IPrimitivePipeline.h  PassInvocation.h  PipelineRegistry.cpp  PipelineRegistry.h
src/cpp/Renderer/RenderingStages/: LoadPass.cpp  LoadPass.h  OpaquePass.cpp  OpaquePass.h  RenderingPass.cpp  RenderingPass.h
src/cpp/Renderer/Resource/: MultiThreadedKeyGenerator.h  ResourceKey.h  ResourceSystems.h
src/cpp/Renderer/SSAO/: SSAO.cpp  SSAO.h  SSAOPass.h  SSAOResource.h
src/cpp/Renderer/Skybox/: SkyboxBakePass.cpp  SkyboxBakePass.h  SkyboxPass.cpp  SkyboxPass.h  SkyboxSystem.cpp  SkyboxSystem.h
src/cpp/UI/: AppWindow.h  CMakeLists.txt  UI.h  UIAPI.h  UIAnimation.h  UIContext.cpp  UIContext.h  UICursor.h  UIEvents.h  UIReference.h  UITransform.h  UITypeContext.cpp  UITypeContext.h
src/cpp/UI/Rendering/: TextRenderer.h  UI.cpp  UIGraphicsPass.h  UIPass.h  UIPassInvocation.h  UIRenderingContext.cpp  UIRenderingContext.h  UIRenderingPass.h  UIStyleType.h  WidgetRenderer.h
src/cpp/UI/Text/: UIFont.h  UIFontLoader.cpp  UIFontLoader.h  UIText.h
src/cpp/UI/Window/: AllocationContext.h  LayoutContext.cpp  LayoutContext.h  UIAnimationContext.cpp  UIAnimationContext.h  UIWindowContext.cpp  UIWindowContext.h
src/cpp/Util/: Color.cpp  Color.h  Concepts.h  Random.cpp  Random.h  enum_bit.h  functions.h  glm_double.h
src/cpp/constexpr/: FunctionInfo.h  General.h  PackIteration.h  PackManip.h  Template.h  Traits.h  TypeInfo.h  VariadicInfo.h  VariadicManip.h  assert.h
src/cpp/memory/: AtomicPopList.h  PointerRange.h  Span.h  TypeOps.h  alloc.h  any.h  atomic_byte_arena.h  bitset.h  byte_arena.h  byte_stream.h  free_list_allocator.h  function.h  hash.h  memory.h  static_string.h  type_info.h  typeless_vector.h  vector.h
src/cpp/openGL/BufferObjects/: FrameBufferObject.h
src/cpp/openGL/Shader/: OpenGLShaderCompiler.cpp  OpenGLShaderCompiler.h  Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  ShaderCache.cpp  ShaderCache.h  ShaderClass.cpp  ShaderClass.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderDefinition.cpp  ShaderDefinition.h  ShaderReflection.cpp  ShaderReflection.h
(+115 files in other folders)
